fixed minor z-index bug

--- a/Styles/index.css
+++ b/Styles/index.css
@@ -207,7 +207,7 @@ body {
 .trending__songs__card:hover {
   cursor: pointer;
   transform: scale(1.3);
-  z-index: 1;
+  z-index: 3;
 }
 
 
